# CProjects

./: .gitignore  README.md
CS23820/WS1.1/: CMakeLists.txt  main.cpp
CS23820/WS2.1/: CMakeLists.txt
CS23820/WS2.2/: CMakeLists.txt  multiply.c
CS23820/WS3.1/: CMakeLists.txt
CS23820/WS4.2/: CMakeLists.txt  main.cpp
CS23820/WS5-Reader/: CMakeLists.txt  main.cpp
CS23820/WS5-Server/: CMakeLists.txt  main.cpp
CS23820/WS6.1/: CMakeLists.txt  recursive.cpp
CS23820/WS6.2/: CMakeLists.txt  referencetype.cpp
CS23820/WS6.3/: CMakeLists.txt  Date.cpp  Date.h  Employee.cpp  Employee.h  Pension.cpp  Pension.h  main.cpp
CS23820/WS7.1/: CMakeLists.txt  main.cpp
CS23820/inglenook-SBP/: CMakeLists.txt  main.c
CS23820/inglenook-SLP/: CMakeLists.txt  main.cpp  siding.cpp  siding.h  sidings.cpp  sidings.h  station.cpp  station.h  vehicle.cpp  vehicle.h  wagon.cpp  wagon.h
CS238Assign/: CMakeLists.txt  wagon_data.txt  wagon_positions.txt  wagon_positions1.txt
CS238WS2.1/: main.cpp
CS238WS2.2/: biggest.c  main.cpp
CS238WS3.1/: main.c
CS238WS4.1/: CMakeLists.txt  fileCode.c  main.cpp
CS238WS4.2/: main.cpp
SBP/: CMakeLists.txt  main.c
